--- a/css/flex.css
+++ b/css/flex.css
@@ -7,14 +7,23 @@ div {
     padding: 10px;
 }
 
-.grid {
+.flex {
     background-color: lightskyblue;
 
-    display: grid;
-
-    grid-template-columns: 100px 1fr 2fr;
-    grid-gap: 25px;
+    display: flex;
 }
+
+.flex > :nth-child(2n), 
+.flex > :nth-child(3n) {
+    flex: 2 0 0;
+    margin: 12px;
+
+}
+.flex > :nth-child(3n + 1) {
+    flex: 1 0 0;
+    margin: 12px;
+}
+
 
 .div1 {
     height: 50px;
