--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,8 @@ div {
 
     display: grid;
 
-    grid-template-columns: min-content max-content fit-content(400px);
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
     grid-gap: 25px;
 }
 
