--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ div {
 
     display: grid;
 
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     grid-auto-rows: minmax(100px, auto);
     grid-gap: 25px;
 }
