--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,9 @@ div {
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     grid-auto-rows: minmax(100px, auto);
     grid-gap: 25px;
+
+    align-items: start;
+    justify-items: start;
 }
 
 .div1 {
