--- a/css/styles.css
+++ b/css/styles.css
@@ -12,12 +12,14 @@ div {
 
     display: grid;
 
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-    grid-auto-rows: minmax(100px, auto);
+    height: 500px;
+    width: 500px;
+    grid-template-columns: 100px 100px 100px;
+    grid-auto-rows: 100px 100px 100px;
     grid-gap: 25px;
 
-    align-items: start;
-    justify-items: start;
+    justify-content: space-between;
+    align-content: space-between;
 }
 
 .div1 {
