--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 * {
     font-size: 18px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    width: auto;
 }
 
 div {
@@ -11,15 +12,37 @@ div {
     background-color: lightskyblue;
 
     display: grid;
+    width: 100%;
 
-    height: 500px;
-    width: 500px;
-    grid-template-columns: 100px 100px 100px;
-    grid-auto-rows: 100px 100px 100px;
+    grid-template-columns: repeat(12, minmax(0, 1fr));
     grid-gap: 25px;
+}
 
-    justify-content: space-between;
-    align-content: space-between;
+.div1, .div2, .div3 {
+    grid-column: 1 / -1;
+}
+
+@media (min-width: 700px) {
+    .div2 {
+        grid-column: 1 / 7;
+    }
+    
+    .div3 {
+        grid-column: 7 / 13;
+    }
+}
+
+@media (min-width: 900px) {
+    .div1 {
+        grid-column: 1 / 5;
+    }
+    .div2 {
+        grid-column: 5 / 9;
+    }
+    
+    .div3 {
+        grid-column: 9 / 13;
+    }
 }
 
 .div1 {
